--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
        android:id="@+id/pager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
+       android:layout_marginTop="60px"
        >
 
    </android.support.v4.view.ViewPager>
