--- a/app/src/main/res/layout/random_tab.xml
+++ b/app/src/main/res/layout/random_tab.xml
@@ -6,7 +6,7 @@
     android:id="@+id/viewA">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/cardList"
+            android:id="@+id/questionsCardList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
