--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#A6E3CE</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="red">#C70039</color>
+    <color name="green">#27AE60</color>
+    <color name="grey">#A9A9A9</color>
 </resources>
