--- a/app/src/main/res/layout/new_topic_layout.xml
+++ b/app/src/main/res/layout/new_topic_layout.xml
@@ -24,12 +24,12 @@
             android:id="@+id/topicTextView" />
 
         <EditText
+            android:id="@+id/newTopicET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/topicEditText"
             android:layout_below="@+id/topicTextView"
             android:hint="type topic name here..."
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
             android:text="Topic Image: "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/topicImageTextView"
-            android:layout_below="@id/topicEditText"/>
+            android:layout_below="@id/newTopicET"/>
 
         <ImageButton
             android:layout_width="200dp"
