--- a/app/src/main/res/layout/topic_card_layout.xml
+++ b/app/src/main/res/layout/topic_card_layout.xml
@@ -13,24 +13,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:padding="5dp">
 
         <ImageView
             android:id="@+id/topicImageView"
-
             android:layout_width="match_parent"
-            android:layout_height="300px"
+            android:layout_height="125dp"
             android:layout_centerHorizontal="true"
             android:src="@drawable/tick" />
 
-        <TextView
+        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/topicImageView"
             android:layout_centerHorizontal="true"
             android:textAlignment="center"
-            android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/topicNameTextView" /> -->
+
+        <com.alexgower.odin.SingleLineTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/topicImageView"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:id="@+id/topicNameTextView" />
 
