mess of a situation with nested fragments for go-into-topic

--- a/app/src/main/res/layout/topic_card_layout.xml
+++ b/app/src/main/res/layout/topic_card_layout.xml
@@ -25,11 +25,11 @@
         <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/topicImageView"
+            android:layout_below="@+position/topicImageView"
             android:layout_centerHorizontal="true"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/topicNameTextView" /> -->
+            android:position="@+position/topicNameTextView" /> -->
 
         <com.alexgower.odin.SingleLineTextView
             android:layout_width="wrap_content"
