--- a/app/src/main/res/layout/in_topic.xml
+++ b/app/src/main/res/layout/in_topic.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/viewB">
+    android:id="@+id/viewInTopic">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/topics_tab_fragment_container"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/inTopicQuestionsCardList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            />
 
 </RelativeLayout>
