--- a/app/src/main/res/layout/topics_tab.xml
+++ b/app/src/main/res/layout/topics_tab.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/viewB">
+    android:id="@+id/topics_tab_fragment_container">
 
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/topics_tab_fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-</RelativeLayout>
+</LinearLayout>
