--- a/app/src/main/res/layout/edit_topic_layout.xml
+++ b/app/src/main/res/layout/edit_topic_layout.xml
@@ -19,13 +19,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Topic Name: "
+            android:text="Topic Name: (tap to change)"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/topicTextView" />
 
         <EditText
             android:id="@+id/editTopicET"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/topicTextView"
             android:layout_alignParentStart="true" />
@@ -33,7 +33,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Topic Image: "
+            android:text="Topic Image: (tap to change) "
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/topicImageTextView"
             android:layout_below="@id/editTopicET"/>
@@ -41,11 +41,24 @@
         <ImageButton
             android:layout_width="200dp"
             android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@id/topicImageTextView"
-            android:src="@drawable/ic_add_xxxhdpi"
+            android:src="@drawable/ic_add"
             android:id="@+id/selectImageButton"
+            android:scaleType="centerInside"
+            android:elevation="5dp" />
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_below="@id/topicImageTextView"
+            android:src="@drawable/topic_default"
+            android:id="@+id/selectImageView"
             android:scaleType="fitCenter"
-            android:backgroundTint="@color/grey"/>
+            android:layout_alignStart="@id/selectImageButton"/>
 
         <ImageButton
             android:layout_width="50dp"
@@ -56,6 +69,16 @@
             android:id="@+id/closeDialogButton"
             android:scaleType="fitCenter"
             android:backgroundTint="@color/green"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/selectImageButton"
+            android:layout_toEndOf="@id/closeDialogButton"
+            android:src="@drawable/ic_delete"
+            android:id="@+id/deleteTopicButton"
+            android:scaleType="fitCenter"
+            android:backgroundTint="@color/red"/>
 
         <ImageButton
             android:layout_width="50dp"
